<resources>
    <string name="app_name">MSheet</string>
    <string name="company_name">TCorner</string>

    <string name="error_generic">it seems that we\'ve encountered a problem.</string>
    <string name="error_image_chooser">There\'s a problem with the image.</string>
    <string name="error_no_image">No selected image.</string>
    <string name="et_piece_name">Piece Name</string>
    <string name="tv_group_tags">Add Tags to Your Piece</string>
    <string name="title_add_piece">Add Piece</string>
    <string name="title_update_piece">Update Piece</string>
    <string name="title_add_collection">Add Collection</string>
    <string name="title_update_collection">Update Collection</string>
    <string name="error_piece_name_empty">Piece name cannot be empty.</string>
    <string name="dialog_delete_group_title">Delete Group</string>
    <string name="dialog_delete_group_message">Are you sure you want to remove this beautiful piece?</string>
    <string name="dialog_delete_group_ok">OK</string>
    <string name="play_sheet">Play!</string>
    <string name="saving_image">Saving Image…</string>
    <string name="rotating_image">Rotating Image…</string>
    <string name="removing_image">Removing Image…</string>
    <string name="dialog_title_delete_sheet">Delete Sheet</string>
    <string name="dialog_message_delete_sheet">Are you sure you want to remove this sheet?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="loading">Loading</string>
    <string name="suggested_tags">Suggested Tags</string>
    <string name="error_duplicate_tag">Redundancy makes us crazy. You cannot add the same tag again.</string>
    <string name="empty_default_message">It seems that we\'re empty here…</string>
    <string name="success_delete_group">Group successfully deleted.</string>

    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="collections">Collections</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="next_page_sensor">Next Page Sensor</string>
    <string name="sensor_settings_detail">Allows hovering on your proximity sensor to trigger next page when playing a sheet.</string>
    <string name="developer">Developer</string>
    <string name="about_message"><![CDATA[
    For pianists that suffer from <b>stuffed-crowded-folderization-syndrome</b> of music sheets (just kidding).
    <br /><br />• Compiles and handle all of your beautiful piano piece to be play.
    <br /><br />• Comes with collections that will arrange your piece in any order you want, helpful when you\'re playing non-stop in series/medley.
    <br />• Flipping pages has never been easier! you don\'t even need to hold nor touch it, just hover your hands and voila! It will instantly turn to next page for you.
    <br />• You can even play beside an electric fan without worrying your folder to be thrown to the other world.
    <br />• More features to come!]]></string>
    <string name="collection_name">Collection Name</string>
    <string name="group_collection_title">Groups in this collection</string>
    <string name="default_collection_name">Collection 1</string>
    <string name="collection_group_empty">Click here to add a piece(s) to your collection.</string>
</resources>
