<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_access"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_music_blue_500_18dp"
            android:title="@string/library"/>
        <item
            android:id="@+id/nav_collections"
            android:icon="@drawable/ic_library_books_green_500_18dp"
            android:title="@string/collections"/>
    </group>

    <group
        android:id="@+id/group_tools"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_grey_500_18dp"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_red_500_18dp"
            android:title="@string/about"/>
    </group>
</menu>