<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coor_add_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="@dimen/vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_music_note_grey_500_18dp"
                android:drawablePadding="@dimen/edittext_drawable_padding_left"
                android:hint="@string/et_piece_name"
                android:maxLength="100"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tag_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textinput_group_name"
            android:layout_marginTop="@dimen/m_margin"
            android:drawableLeft="@drawable/ic_bookmark_grey_500_18dp"
            android:text="@string/tv_group_tags"/>

        <me.gujun.android.taggroup.TagGroup
            android:id="@+id/tag_group"
            style="@style/TagGroup.Large"
            android:layout_below="@+id/tag_title"
            android:layout_marginTop="@dimen/s_margin"
            app:atg_borderColor="@color/colorPrimaryDark"
            app:atg_checkedBackgroundColor="@color/colorPrimaryDark"
            app:atg_checkedBorderColor="@color/colorPrimaryDark"
            app:atg_isAppendMode="true"
            app:atg_textColor="@color/colorPrimaryDark"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_tag_suggested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_group"
            android:layout_marginTop="@dimen/xl_margin"
            android:drawableLeft="@drawable/ic_bookmark_grey_500_18dp"
            android:text="@string/suggested_tags"/>

        <me.gujun.android.taggroup.TagGroup
            android:id="@+id/tag_group_suggested"
            style="@style/TagGroup.Large"
            android:layout_below="@+id/tv_tag_suggested"
            android:layout_marginTop="@dimen/s_margin"
            app:atg_borderColor="@color/colorPrimaryDark"
            app:atg_checkedBackgroundColor="@color/colorPrimaryDark"
            app:atg_checkedBorderColor="@color/colorPrimaryDark"
            app:atg_textColor="@color/colorPrimaryDark"/>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_check_white_24dp"/>

</android.support.design.widget.CoordinatorLayout>