<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coor_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/m_padding">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/logo"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_headline"/>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/logo"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorDivider"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_about_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/s_padding"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_body"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorDivider"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_small_body"/>

            <LinearLayout
                android:id="@+id/linear_developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/company_name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_body"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>